# ai-coreutils

./: .bashrc  .gitignore  .ralph_status_result  CLAUDE.MD  COPY.bat  Cargo.toml  CUsersKimpaDocumentsVibeai-coreutilstest_grep.txt  RALPH.md  README.md  TEST_REPORT.md  gnu-core-utils.md  install.sh  prompt.md  ralph.yml  setup.sh  test.sh  test.txt
.agent/: scratchpad.md
.agent/sessions/: 2026-01-19_ai-ls-implementation.md
.claude/: doc-config.yml
.claude/hooks/: README.md  ralph-status.ps1  ralph-status.sh
.claude/skills/: README.md  auto-doc.md  dev-agent.md  doc-agent.md  phase-agent.md  test-agent.md
.ralph/: circuit-breaker  circuit_breaker.sh  init.sh  monitor  monitor.sh  prompt.md  ralph-loop  ralph.yml  ralph_loop.sh  ralphjs.cjs  response-analyzer  response_analyzer.sh  scratchpad.md  session.md  state.json  tui.cjs
.ralph/checkpoints/: checkpoint_2026-01-19T19-11-55.txt  checkpoint_2026-01-19T19-20-31.txt  checkpoint_20260119_152641.txt  checkpoint_20260119_160701.txt  checkpoint_20260119_160820.txt  checkpoint_20260119_161203.txt  checkpoint_20260119_161239.txt  checkpoint_20260119_162037.txt  checkpoint_20260119_162145.txt  checkpoint_20260119_162305.txt  checkpoint_20260119_162655.txt  checkpoint_20260119_162809.txt  checkpoint_20260119_164001.txt  checkpoint_20260119_164833.txt  checkpoint_20260119_165618.txt  checkpoint_20260119_165944.txt  checkpoint_20260119_201408.txt  post-task-implement-ai-grep.json
.ralph/history/: claude_output_1.json  claude_output_2.json  claude_output_3.json  claude_output_4.json  claude_output_5.json  claude_output_6.json  claude_output_7.json  prompt_1.md  prompt_2.md  prompt_3.md  prompt_4.md  prompt_5.md  prompt_6.md  prompt_7.md  prompt_8.md
.ralph/sessions/: 2026-01-19_ai-cat-implementation.md  ralph_1768840080_665.md  ralph_1768842738_9143.md  ralph_1768847677_11173.md  ralph_1768847970_31270.md  ralph_1768849914481_2499.md  ralph_1768850096697_261.md  ralph_1768852026577_473.md  ralph_1768852161435_3910.md  ralph_1768852370538_834.md  ralph_1768852460591_6986.md  ralph_1768853577556_766.md  ralph_1768856812395_2952.md
benches/: jsonl_output.rs  memory_access.rs  simd_comprehensive.rs  simd_performance.rs
benchmarks/: GNU_COMPARISON_REPORT.md
docs/: README.md  api-reference.md  architecture.md  async-operations.md  bindings.md  development.md  getting-started.md  jsonl-format.md  memory-access.md  ml-integration.md  performance.md  simd-optimizations.md
docs/examples/: ai-agent-integration.md  async-workflows.md  basic-usage.md  memory-operations.md  pipeline-processing.md
docs/utilities/: ai-analyze.md  ai-cat.md  ai-chmod.md  ai-chown.md  ai-cp.md  ai-find.md  (+10 more)
nodejs/: Cargo.toml  README.md  package.json
nodejs/examples/: file-classification.js  memory.js  pattern-detection.js
nodejs/src/: lib.rs
python/: README.md
skills-to-adapt/: doc-config.yml
src/: async_ops.rs  error.rs  fs_utils.rs  jsonl.rs  lib.rs  memory.rs  ml_ops.rs  python.rs  simd_ops.rs
test_e2e/: e2e_test_suite.sh  large.txt  patterns.txt
tests/: integration_tests.rs
(+29 files in other folders)
