[package]
name = "ai-coreutils"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Modern core utilities for AI agents with JSONL output and memory access"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/ai-coreutils"
homepage = "https://github.com/your-org/ai-coreutils"
keywords = ["cli", "coreutils", "ai", "jsonl", "memory"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Memory mapping
memmap2 = "0.9.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Directory traversal
walkdir = "2.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parallel processing
rayon = "1.8"

# Base64 encoding
base64 = "0.21"

# File system operations
dirs = "5.0"

# Logging
log = "0.4"
env_logger = "0.10"

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bin]]
name = "ai-ls"
path = "src/bin/ai-ls.rs"

[[bin]]
name = "ai-cat"
path = "src/bin/ai-cat.rs"

[[bin]]
name = "ai-grep"
path = "src/bin/ai-grep.rs"

[[bin]]
name = "ai-touch"
path = "src/bin/ai-touch.rs"

[[bin]]
name = "ai-mkdir"
path = "src/bin/ai-mkdir.rs"

[[bin]]
name = "ai-rmdir"
path = "src/bin/ai-rmdir.rs"

[[bin]]
name = "ai-head"
path = "src/bin/ai-head.rs"

[[bin]]
name = "ai-tail"
path = "src/bin/ai-tail.rs"

# Stubs for binaries not yet implemented
# Uncomment these as the utilities are implemented

[[bin]]
name = "ai-wc"
path = "src/bin/ai-wc.rs"

[[bin]]
name = "ai-cp"
path = "src/bin/ai-cp.rs"

[[bin]]
name = "ai-mv"
path = "src/bin/ai-mv.rs"

[[bin]]
name = "ai-rm"
path = "src/bin/ai-rm.rs"

[[bin]]
name = "ai-find"
path = "src/bin/ai-find.rs"

[[bin]]
name = "ai-chmod"
path = "src/bin/ai-chmod.rs"

[[bin]]
name = "ai-chown"
path = "src/bin/ai-chown.rs"

[[bench]]
name = "memory_access"
harness = false

[[bench]]
name = "jsonl_output"
harness = false

[[bench]]
name = "simd_performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true
